--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<h1 style="margin: 2rem 0; text-align: center; font-size: 4rem; font-weight: bold;"><span style="color: #38B2AC;">TailwindCSS</span> and <span style="color: #e53e3e;">Angular</span> is awesome!</h1>
-<div style="display: flex; justify-content: space-around; margin: 20px 0">
-  <button mat-raised-button color="primary">Primary Button</button>
-  <button mat-raised-button color="accent">Accent Button</button>
-  <button mat-raised-button color="warn">Warn Button</button>
+<div class="bg-blue-800 text-white flex items-center pl-4 pr-4"
+     id="topbar">
+  <span class="text-lg cursor-pointer outline-none" routerLink="/">Takenouchi Ryu</span>
 </div>
-<p style="margin: 2rem 0; text-align: center; font-size: 1.875rem;">Thanks for reading!</p>
+<div class="md:container md:mx-auto border-solid border-l border-r border-light-blue-500 p-2"
+     id="main">
+  <router-outlet></router-outlet>
+</div>
